# jaxoptics

./: LICENSE  README.md  citation.cff  pyproject.toml
examples/: 01_single_mode_conversion.ipynb  02_multimode_intensity_shaping.ipynb  mode_generation.ipynb
src/jaxoptics/: __init__.py  fields.py  modes.py  optical_sequence.py  visualize.py
src/jaxoptics/freespace_propagators/: __init__.py  angular_spectrum.py  rayleigh_sommerfeld.py
src/jaxoptics/modulators/: __init__.py  phase.py
tests/: test_fields.py
