[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxoptics"
version = "0.1.0"
description = "Differentiable Optics in JAX"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.8.2",
    "equinox>=0.13.2",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]